--- a/Frontend/src/css/secondary-pages.css
+++ b/Frontend/src/css/secondary-pages.css
@@ -10,7 +10,7 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
     padding: 100px;
-    background: #131921;
+    background: #4267B2;
     border-radius: 10px;
 }
 
@@ -64,7 +64,7 @@ body {
 }
 
 .modal {
-    background-color: #131921;
+    background-color: #4267B2;
     color: white;
     border-radius: 10px;
     padding: 30px;
