--- a/Frontend/src/css/style.css
+++ b/Frontend/src/css/style.css
@@ -60,6 +60,10 @@
     padding: 10px 20px;
 }
 
+.rightTextDiv {
+    float: right;
+}
+
 .validated-field:invalid {
     outline: 2px solid var(--error-color);
 }
@@ -88,3 +92,61 @@
     display: block;
 }
 
+/* Styles for home.html */
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box {
+    width: 500px;
+    margin: 10px;
+    outline: dashed 2px black;
+    display: flex;
+    justify-content: center;
+}
+
+.navigation {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+
+  list-style: none;
+  margin: 0;
+  background: #4267B2;
+}
+
+.navigation a {
+  text-decoration: none;
+  display: block;
+  padding: 1em;
+  color: white;
+}
+
+.navigation a:hover {
+  background: #1565C0;
+}
+
+@media all and (max-width: 800px) {
+  .navigation {
+    justify-content: space-around;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .navigation {
+    flex-flow: column wrap;
+    padding: 0;
+  }
+  .navigation a {
+    text-align: center;
+    padding: 10px;
+    border-top: 1px solid rgba(255, 255, 255,0.3);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .navigation li:last-of-type a {
+    border-bottom: none;
+  }
+}
