yuh we the bestt

--- a/Frontend/src/css/secondary-pages.css
+++ b/Frontend/src/css/secondary-pages.css
@@ -1,5 +1,5 @@
 body {
-    background: #eaeded;
+    background: #fff;
 }
 
 .card {
@@ -43,8 +43,18 @@ body {
     cursor: pointer;
 }
 
+#hire {
+    background: #aed9ff;
+    padding: 3px;
+    border-radius: 3px;
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
 .container {
-    background-color: #eaeded;
+    background-color: #BED8FB;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,6 +66,7 @@ body {
     height: 100vh;
     width: 100vw;
     transition: opacity 0.3s ease;
+    font-family: "Avenir Next", Calibri, Verdana, sans-serif;
 }
 
 .container.show {
@@ -64,8 +75,8 @@ body {
 }
 
 .modal {
-    background-color: #4267B2;
-    color: white;
+    background-color: #fff;
+    color: #09217D;
     border-radius: 10px;
     padding: 30px;
     width: 600px;
