--- a/Frontend/src/css/style.css
+++ b/Frontend/src/css/style.css
@@ -11,10 +11,19 @@
     counter-reset: section;
 }
 
+.about_holder {
+    display: flex;
+}
+
 .about_outer {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
+}
+
+img.animated-gif{
+  width: 500px;
+  height: auto;
 }
 
 .about {
@@ -37,6 +46,7 @@
 
 .header {
     /* Flexbox: https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
+    position: sticky; top: 0;
     height: 70px;
     display: flex;
     flex-flow: row;
@@ -85,8 +95,21 @@
     cursor: pointer;
 }
 
+#browse {
+    background: #1E64F0;
+    padding: 15px;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    border: 0px solid black;
+    cursor: pointer;
+    font-family: "Avenir Next", Calibri, Verdana, sans-serif;
+    font-size: 19px;
+    font-weight: bold;
+}
+
 .button:hover, button:hover {
-    background: #9cc3e4;
+    background: #0A348D;
 }
 
 .card {
@@ -98,15 +121,25 @@
     font-family: "Avenir Next", Calibri, Verdana, sans-serif;
 }
 
-.card_test{
+.card_frontpage {
+    color: #09217D;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 20px;
+    padding: 10px 20px;
+    width: 600px;
+    font-family: "Avenir Next", Calibri, Verdana, sans-serif;
+}
+
+.card_test {
     color: #09217D;
     background-color: #fff;
     text-align: center;
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding: 100px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        padding: 100px;
     border-radius: 10px;
     font-family: "Avenir Next", Calibri, Verdana, sans-serif;
 }
